--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.3.0",
     "@angular/service-worker": "~13.3.0",
     "@schematics/angular": "^14.1.0",
+    "angular-ng-autocomplete": "^2.0.12",
     "firebase": "^9.9.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
