--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/forms": "~13.3.0",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
+    "@angular/pwa": "^14.0.0",
     "@angular/router": "~13.3.0",
     "@angular/service-worker": "~13.3.0",
     "@schematics/angular": "^14.1.0",
